--- a/public/config.yaml
+++ b/public/config.yaml
@@ -6,15 +6,15 @@ health:
   v1: "/v1/health"
   v2: "/v2/health"
 sources:
-  defaultRtsp: "rtsp://sketsstudio:Skets@12345@172.30.115.34:554/stream2"
+  defaultRtsp: "rtsp://sketsstudio:Skets@12345@172.30.115.34:554/stream1"
   cam1: null
   cam2: null
   cam3: null
 ui:
   modelVersion: "v2"
 rooms:
+  - "Security Room"
   - "Lobby"
-  - "Server Room"
   - "Office A"
 otherBackend:
   apiBaseUrl: "http://3.110.42.224:3000"
@@ -35,6 +35,6 @@ analytics:
     currentTempHumid: "/api/sensor-dashboard/current-reading"        # returns current temp, humidity, sensors
     currentSensors: "/api/sensor-dashboard/sensor-list"
     previousTemp: "/api/sensor-dashboard/temperature-record"
-    previousHumidity: "/api/"
+    previousHumidity: "/api/sensor-dashboard/humidity-record"
 
 
