last min changes

--- a/public/config.yaml
+++ b/public/config.yaml
@@ -17,7 +17,7 @@ rooms:
   - "Lobby"
   - "Office A"
 otherBackend:
-  apiBaseUrl: "http://3.110.42.224:3000"
+  apiBaseUrl: "http://localhost:3000"
   forwardFramePath: "/api/room-live/activity-logs/bulk?camera_id=1&room_id=1"
   analyticsPath: "/api/room-live/status?time=1"
   statusPath: "/api/status/verified"
@@ -28,8 +28,8 @@ analytics:
   pollMs: 20000        
   temperatureThreshold: 42
   humidityThreshold: 80
-  apiBaseUrl: "http://3.110.42.224:3000"
-  aiBaseUrl: "http://172.26.119.12:8001"
+  apiBaseUrl: "http://localhost:3000"
+  aiBaseUrl: "http://172.30.205.102:8001"
 
   endpoints:
     currentTempHumid: "/api/sensor-dashboard/current-reading"        # returns current temp, humidity, sensors
